<resources>
    <string name="app_name">仿東森購物</string>
    <string name="title_home">首頁</string>
    <string name="title_bestsellers">熱銷榜</string>
    <string name="title_popularActivities">熱門活動</string>
    <string name="title_tvHot">TV熱播</string>
    <string name="title_cart">購物車</string>
    <string name="title_member">會員</string>

    <string name="alert">提醒</string>
    <string name="sure_to_leave">確定離開？</string>
    <string name="network_unavailable_title">沒有網路連線</string>
    <string name="network_unavailable">無法取得網路連線！</string>
    <string name="sure">確定</string>
    <string name="cancel">取消</string>

    <string name="member_btn_login">立即登入/註冊</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>