<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_bestsellers"
        android:icon="@drawable/ic_bestsellers_24"
        android:title="@string/title_bestsellers" />

    <item
        android:id="@+id/navigation_popularActivities"
        android:icon="@drawable/ic_hot_event_24"
        android:title="@string/title_popularActivities" />

    <item
        android:id="@+id/navigation_tvHot"
        android:icon="@drawable/ic_tv_hot_24"
        android:title="@string/title_tvHot" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shopping_cart_24"
        android:title="@string/title_cart" />

<!--    <item-->
<!--        android:id="@+id/navigation_member"-->
<!--        android:icon="@drawable/ic_member_24"-->
<!--        android:title="@string/title_member" /> &lt;!&ndash; 新增第六個頁面 &ndash;&gt;-->

</menu>
