<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.yuefenginterviewproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bestsellers"
        android:name="com.example.yuefenginterviewproject.ui.bestsellers.bestsellersFragment"
        android:label="@string/title_bestsellers"
        tools:layout="@layout/fragment_bestsellers" />

    <fragment
        android:id="@+id/navigation_popularActivities"
        android:name="com.example.yuefenginterviewproject.ui.popularactivities.popularactivitiesFragment"
        android:label="@string/title_popularActivities"
        tools:layout="@layout/fragment_popularactivities" />
</navigation>